--- a/CarRental/WebContent/WEB-INF/web.xml
+++ b/CarRental/WebContent/WEB-INF/web.xml
@@ -4,7 +4,6 @@
   <welcome-file-list>
     <welcome-file>index.jsp</welcome-file>
   </welcome-file-list>
-  
   <servlet>
     <description></description>
     <display-name>MainServlet</display-name>
@@ -15,5 +14,12 @@
     <servlet-name>MainServlet</servlet-name>
     <url-pattern>/MainServlet</url-pattern>
   </servlet-mapping>
-  
+  <filter>
+    <filter-name>CharsetSampleFilter</filter-name>
+    <filter-class>by.htp.vmermolenko.carrental.web.filter.CharsetSampleFilter</filter-class>
+  </filter>
+  <filter-mapping>
+    <filter-name>CharsetSampleFilter</filter-name>
+    <url-pattern>/*</url-pattern>
+  </filter-mapping>
 </web-app>
